# fuzzy-search

./: .gitignore  Cargo.toml
.cargo/: config.toml
demo/: fuzzySearch.js  index.html  index.js  package-lock.json  package.json  vite.config.js
src/: lib.rs  main.rs
www/: fuzzySearch.js  index.html  index.js  package-lock.json  package.json
